data/derived/sp14/progs/unify/prog0867.ml.out
Characters 184-210:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a * 'b
